Changed website description

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: ISMIR 2020  # your site title
 author: Evan Savage # You :P
 description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  International Society for Music Information Retrieval Conference
 baseurl: "/ISMIR2020" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
