--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,10 @@ social:
 # THEME SETTINGS
 navigation: # Navigation links
   - {name: 'Home', link: '/'}
+  - {name: 'Program', link: '/program'}
+  - {name: 'Events', link: '/events'}
+  - {name: 'Participants', link: '/participants'}
   - {name: 'About', link: '/about'}
-  - {name: 'Contact', link: '/contact'}
 
 tagline: >
   Modern Jekyll theme focused on speed performance &amp; SEO best practices
@@ -68,5 +70,5 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
 
-sass:
-    sass_dir: _sass
+# sass:
+#     sass_dir: _sass
