Adding link to call for tutorials

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,10 @@ navigation: # Navigation links
   - {name: 'Events', link: '/events'}
   - {name: 'Organizers', link: '/organizers'}
   - {name: 'Call for Papers', link: '/cfp'}
+  - {name: 'Call for Tutorials', link: '/call_for_tutorials'}
   - {name: 'Montréal', link: '/Montreal'}
-  
 
+  
 tagline: >
   Modern Jekyll theme focused on speed performance &amp; SEO best practices
 
