Add: Link in navigation bar to call for music page
Submission deadline dates were also added to homepage and dates page.

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navigation: # Navigation links
   - {name: 'Events', link: '/events'}
   - {name: 'Organizers', link: '/organizers'}
   - {name: 'Call for Papers', link: '/cfp'}
+  - {name: 'Call for Music', link: '/c4m'}
   - {name: 'Call for Tutorials', link: '/call_for_tutorials'}
   - {name: 'Montréal', link: '/Montreal'}
 
