--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social:
 # THEME SETTINGS
 navigation: # Navigation links
   # - {name: 'Home', link: '/'}
-  - {name: 'Registration', link: '/registration'}
+  # - {name: 'Registration', link: '/registration'}
   - {name: 'Dates', link: '/dates'}
   - {name: 'Events', link: '/events'}
   - {name: 'Organizers', link: '/organizers'}
