--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navigation: # Navigation links
   - {name: 'Events', link: '/events'}
   - {name: 'Organizers', link: '/organizers'}
   - {name: 'Call for Sponsors', link: '/sponsors'}
-
+  - {name: 'WiMIR', link: '/WiMIR'}
 
 tagline: >
   Modern Jekyll theme focused on speed performance &amp; SEO best practices
