--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ social:
 navigation: # Navigation links
   # - {name: 'Home', link: '/'}
   - {name: 'Program', link: 'assets/img/program/vISMIR-2020-Preliminary-Schedule.pdf'}
+  - {name: 'For Participants', link: '/participants'}
   - {name: 'Registration', link: '/registration'}
   - {name: 'Dates', link: '/dates'}
   - {name: 'Events', link: '/events'}
